fix: update DocSearch-Button styling for better responsiveness

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -127,6 +127,9 @@ html {
       @media (min-width: 997px) {
         @apply w-auto justify-between;
       }
+      @media (max-width: 996px) {
+        @apply mr-7;
+      }
       .DocSearch-Search-Icon {
         @apply text-docusaurusColorBase;
       }
